--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,8 @@
             "warn",
             {
                 "singleQuote": true,
-                "printWidth": 150
+                "printWidth": 150,
+                "endOfLine": "auto"
             }
         ],
         "import/first": 0
